--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <% if current_user %>
   Logged in as <%= current_user.email %>.
   <%= link_to "Log Out", logout_path %>
+  <%# user_id needs to be passed to path%>
+  <%= link_to "New car", new_user_car_path(user_id: current_user.id) %>
+  <%= link_to "My garage", user_cars_path(user_id: current_user.id) %>
 <% else %>
   <%= link_to "Sign Up", signup_path %>
   <%= link_to "Log In", login_path %>
