--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_car_path(@car) %> |
-<%= link_to 'Back', cars_path %>
+<%= link_to 'Back', user_cars_path(user_id: @car.user_id) %>
