--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,32 +1,36 @@
-<p id="notice"><%= notice %></p>
+<% if current_user %>
+  <p id="notice"><%= notice %></p>
 
-<h1>Cars</h1>
+  <h1>Cars</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Year</th>
-      <th>Make</th>
-      <th>Model</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @cars.each do |car| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= car.year %></td>
-        <td><%= car.make %></td>
-        <td><%= car.model %></td>
-        <td><%= link_to 'Show', car %></td>
-        <td><%= link_to 'Edit', edit_car_path(car) %></td>
-        <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Year</th>
+        <th>Make</th>
+        <th>Model</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @cars.each do |car| %>
+        <tr>
+          <td><%= car.year %></td>
+          <td><%= car.make %></td>
+          <td><%= car.model %></td>
+          <td><%= link_to 'Show', car %></td>
+          <td><%= link_to 'Edit', edit_car_path(car) %></td>
+          <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Car', new_user_car_path %>
-<%= link_to 'Home', root_path %>
+  <br>
+
+  <%= link_to 'New Car', new_user_car_path %>
+  <%= link_to 'Home', root_path %>
+<% else %>
+  <p>Unauthorized</p>
+<% end %>
