CRUD for services works (think about displayind deleted car/service to the user)

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -15,7 +15,7 @@
   <%= @car.model %>
 </p>
 
-<%= link_to 'Edit', edit_car_path(@car) %> |
+
 <%= link_to 'Back', user_cars_path(user_id: current_user.id) %>
 <%= link_to 'Enter service entry', new_car_service_path(car_id: @car.id) %>
 
@@ -39,7 +39,7 @@
         <td><%= service.date %></td>
         <td><%= service.mileage %></td>
         <td><%= service.comments %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
+        <td><%= link_to 'Edit', edit_service_path(service, car_id: @car.id) %></td>
         <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
