--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -20,5 +20,5 @@
   <%= @service.comments %>
 </p>
 
-<%= link_to 'Edit', edit_service_path(@service) %> |
-<%= link_to 'Back', services_path %>
+
+<%= link_to 'Back', car_path(id: @service.car_id) %>
