implemented protected routes with before_action in controller, experimented with partials, save before installing foundation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,10 @@
 
   <body>
     <%= yield %>
+
+    <footer>
+      This is Mygarage site.
+      <%= yield :footer %>
+    </footer>
   </body>
 </html>
