--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,10 @@
 <% if current_user %>
-  Logged in as <%= current_user.email %>.
-  <%= link_to "Log Out", logout_path %>
-  <%# user_id needs to be passed to path%>
-  <%= link_to "New car", new_user_car_path(user_id: current_user.id) %>
-  <%= link_to "My garage", user_cars_path(user_id: current_user.id) %>
+
 <% else %>
-  <%= link_to "Sign Up", signup_path %>
-  <%= link_to "Log In", login_path %>
+  <div class="message">
+    <h1>Welcome to MyGarageApp!</h1>
+    <p>This app will help you track all the service records for all of your cars. Please, sign up or log in to start</p>
+  </div>
 <% end %>
 
 <p id=”notice”><%= notice %></p>
-
-<h1>Example</h1>
-<p>Lorem ipsum …</p>
