--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,47 +1,51 @@
-<p id="notice"><%= notice %></p>
+<div class="message">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Year:</strong>
-  <%= @car.year %>
-</p>
+  <p>
+    <strong>Year:</strong>
+    <%= @car.year %>
+  </p>
 
-<p>
-  <strong>Make:</strong>
-  <%= @car.make %>
-</p>
+  <p>
+    <strong>Make:</strong>
+    <%= @car.make %>
+  </p>
 
-<p>
-  <strong>Model:</strong>
-  <%= @car.model %>
-</p>
+  <p>
+    <strong>Model:</strong>
+    <%= @car.model %>
+  </p>
 
 
-<%= link_to 'Back', user_cars_path(user_id: current_user.id) %>
-<%= link_to 'Enter service entry', new_car_service_path(car_id: @car.id) %>
+  <span class="back"><%= link_to '<-BACK', user_cars_path(user_id: current_user.id) %></span>
 
-<p>Past services:</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Date</th>
-      <th>Mileage</th>
-      <th>Comments</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <p>Past services:</p>
 
-  <tbody>
-    <% @services.each do |service| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= service.title %></td>
-        <td><%= service.date %></td>
-        <td><%= service.mileage %></td>
-        <td><%= service.comments %></td>
-        <td><%= link_to 'Edit', edit_service_path(service, car_id: @car.id) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Mileage</th>
+        <th>Comments</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @services.each do |service| %>
+        <tr>
+          <td><%= service.title %></td>
+          <td><%= service.date %></td>
+          <td><%= service.mileage %></td>
+          <td><%= service.comments %></td>
+          <td><%= link_to 'Edit', edit_service_path(service, car_id: @car.id) %></td>
+          <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to 'Enter service entry', new_car_service_path(car_id: @car.id), class: 'button' %>
+</div>
