--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Car</h1>
+<div class="message">
+  <h1>Editing Car</h1>
 
-<%= render 'form', car: @car %>
+  <%= render 'form', car: @car %>
 
-<%= link_to 'Show', @car %> |
-<%= link_to 'Back', cars_path %>
+  <%= link_to 'Show', @car %> |
+  <%= link_to 'Back', user_cars_path(user_id: current_user[:id]) %>
+</div>
