--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,7 +1,8 @@
 <% if current_user %>
+<div class="message">
   <p id="notice"><%= notice %></p>
 
-  <h1>Cars</h1>
+  <h1>My cars</h1>
 
   <table>
     <thead>
@@ -29,8 +30,9 @@
 
   <br>
 
-  <%= link_to 'New Car', new_user_car_path %>
-  <%= link_to 'Home', root_path %>
+  <%= link_to 'New Car', new_user_car_path, class: 'button' %>
+  <span class="back"><%= link_to '<-BACK', root_path %></span>
+</div>
 <% else %>
   <p>Unauthorized</p>
 <% end %>
