--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render 'form', car: @car %>
 
-  <span class="back"><%= link_to '<-BACK', user_cars_path %></span>
+  <span class="back"><%= link_to '<-BACK', user_cars_path(user_id: current_user[:id]) %></span>
 </div>
