--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: car, local: true, data: abide) do |form| %>
+<%= form_with(model: car, local: true, html:{class: 'data-abide novalidate'}) do |form| %>
   <% if car.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(car.errors.count, "error") %> prohibited this car from being saved:</h2>
@@ -11,29 +11,61 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
+<form data-abide novalidate>
+  <div data-abide-error class="alert callout" style="display: none;">
+    <p><i class="fi-alert"></i> There are some errors in your form.</p>
   </div>
 
-  <div class="field">
-    <%= form.label :make %>
-    <%= form.text_field :make %>
+  <div class="grid-container">
+    <div class="grid-x grid-margin-x">
+
+      <div class="cell small-12">
+        <label>Year
+          <input type="number" placeholder="eg. 2014" aria-describedby="example1Hint1" aria-errormessage="example1Error1" required pattern="number" id="year" name="car[year]">
+          <span class="form-error" id="example1Error1">
+            Yo, you had better fill this out, it's required.
+          </span>
+        </label>
+        <%#<p class="help-text" id="example1Hint1">Here's how you use this input field!</p>%>
+
+      </div>
+
+      <div class="cell small-12">
+        <label>Make
+          <input type="text" placeholder="eg. Jeep" aria-describedby="example1Hint2" aria-errormessage="example1Error2" id="make" name="car[make]" required>
+          <span class="form-error" id="example1Error2">
+            Yo, you had better fill this out, it's required.
+          </span>
+        </label>
+        <%#<p class="help-text" id="example1Hint2">Here's how you use this input field!</p>%>
+
+      </div>
+
+      <div class="cell small-12">
+        <label>Model
+          <input type="text" placeholder="eg. Cherokee" aria-describedby="example1Hint3" aria-errormessage="example1Error3" id="model" name="car[model]" required>
+          <span class="form-error" id="example1Error3">
+            Yo, you had better fill this out, it's required.
+          </span>
+        </label>
+        <%#<p class="help-text" id="example1Hint3">Here's how you use this input field!</p>%>
+
+      </div>
+
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :model %>
-    <%= form.text_field :model %>
-  </div>
+
 
   <div class="field">
-    <%= form.label :user_id %>
     <%= hidden_field_tag :user_id, params[:user_id] %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <fieldset class="cell large-6">
+    <button class="button" type="submit" value="Submit">Submit</button>
+  </fieldset>
+
+</form>
 <% end %>
 
 
