--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @user, local: true) do |form| %>
+<%= form_with(model: @user, local: true, html:{class: 'data-abide novalidate'}) do |form| %>
 
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -32,8 +32,8 @@
     <%= form.text_field :name %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <fieldset class="cell large-6">
+    <button class="button" type="submit" value="Sign Up">Sign Up</button>
+  </fieldset>
 
 <% end %>
